--- a/style.css
+++ b/style.css
@@ -1,7 +1,8 @@
 body {
     margin: 0%;
     padding: 0%;font-family: sans-serif;
-    background-color: #1a8772;
+    background-color: #285b66;
+    box-sizing: border-box;
 }
 
 * {
@@ -13,7 +14,7 @@ body {
     min-height: 100px;
     background-color: rgb(44, 65, 65);
     margin: auto;
-    margin-top: 150px;
+    margin-top: 100px;
     padding: 20px 40px;
     border-radius: 12px;
     box-shadow: 0 0 15px rgba(0, 0, 0, 0.445);
@@ -29,7 +30,6 @@ h1 {
 .link {
     text-align: center;
     padding: 12px;
-    transition: background-color .1s, border-radius 0.1s;
     margin: 10px 0;
 }
 
@@ -39,7 +39,10 @@ a {
     text-decoration: none;
 }
 
-.link:hover {
-    background-color: #4cad6c;
-    border-radius: 80px;
+a:hover {
+    background-color: #f3f3f3;
+    color: #1a8772;
+    padding: 12px 20px;
+    border-radius: 90px;
+    transition: border-radius 0.1s, background-color 0.1s;
 }
