--- a/KeePass/styles/style.css
+++ b/KeePass/styles/style.css
@@ -111,6 +111,7 @@ h1 {
 }
 
 .a-register:hover {
+    margin-top: 16px;
     background-color: #dbd7d7;
     color: var(--forest-green);
     border-radius: 12px;
@@ -121,4 +122,3 @@ h1 {
     font-size: 25px;
     color: #e9e6e6;
 }
-
