--- a/Barcapedia/styles/styles.css
+++ b/Barcapedia/styles/styles.css
@@ -138,11 +138,15 @@ h1 {
     padding: 9px;
     text-align: center;
     font-size: 1.2rem;
+    height: 80vh;
+    overflow: auto;
 }
 
 .container-jugadores-background {
     background-color: #a50044;
     padding: 10px;
+    width: 100vw;
+    height: 100%;
 }
 
 .container-player {
