Modifque html y css de Barcapedia

--- a/Barcapedia/styles/styles.css
+++ b/Barcapedia/styles/styles.css
@@ -51,6 +51,7 @@ a:hover {
 }
 
 
+
 .log-in {
     border: 2.5px solid #fff;
     border-radius: 20px;      
@@ -192,4 +193,61 @@ h1 {
 .player-card:hover {
     transform: translateY(-10px);
     box-shadow: 0 12px 24px rgba(0, 0, 0, 0.3);
+}
+
+.container-titulos-background { 
+    background-color: #004d98;
+}
+
+.titulos-container {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 20px;
+    padding: 20px;
+}
+
+.titulos {
+    background-color: #fff;
+    border-radius: 10px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+    overflow: hidden;
+    transition: transform 0.3s ease, box-shadow 0.3s ease;
+    width: 250px;
+    text-align: center;
+    margin: 20px;
+}
+
+.titulo-info {
+    padding: 20px;
+}
+
+
+.titulo-info p {
+    margin: 5px 0;
+    color: #666;
+}
+
+.images-titulos img {
+    width: 100%;
+    height: auto;
+    border-bottom: 2px solid #e0e0e0;
+}
+
+.titulos h2 {
+    margin: 10px 0;
+    font-size: 1.5em;
+    color: #333;
+}
+
+.titulos:hover {
+    transform: translateY(-10px);
+    box-shadow: 0 12px 24px rgba(0, 0, 0, 0.3);
+}
+
+footer {
+    background-color: #a50044;
+    padding: 20px;
+    min-height: 80px;
+    display: flex;
 }
