--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 body {
     margin: 0%;
     padding: 0%;font-family: sans-serif;
-    background-color: #285b66;
+    background-color: #ffffff;
     box-sizing: border-box;
 }
 
@@ -10,39 +10,37 @@ body {
 }
 
 .conteiner {
-    width: 300px;
+    background-color: rgb(8, 107, 102);
+    width: 800px;
     min-height: 100px;
-    background-color: rgb(44, 65, 65);
     margin: auto;
     margin-top: 100px;
     padding: 20px 40px;
-    border-radius: 12px;
+    border-radius: 5px;
     box-shadow: 0 0 15px rgba(0, 0, 0, 0.445);
 }
 
 h1 {
-    font-size: 25px;
-    color: #f3f3f3;
+    font-size: 3.1rem;
+    color: #ffffff;
     text-align: center;
-    border-bottom: 2px solid #f3f3f3;
+    text-decoration: underline;
 }
 
 .link {
     text-align: center;
-    padding: 12px;
-    margin: 10px 0;
+    padding: 10px 5px;
+    margin: 16px 0;
 }
 
 a {
-    color: #f3f3f3;
+    color: #e7e7e7;
     font-size: 25px;
     text-decoration: none;
+    transition: all .1s;
+    font-weight: 800;
 }
 
 a:hover {
-    background-color: #f3f3f3;
-    color: #1a8772;
-    padding: 12px 20px;
-    border-radius: 90px;
-    transition: border-radius 0.1s, background-color 0.1s;
+    color: rgb(148, 148, 148);
 }
